--- a/index.html
+++ b/index.html
@@ -96,52 +96,62 @@
           <h2 class="case-heading">Чем мы занимаемся</h2>
           <ul class="case-list list">
             <li class="case-item">
-              <img src="./images/box1.jpg" alt="верстка на компьютере" width="370" />
+              <img src="./images/box1.png" alt="верстка на компьютере" width="370" />
             </li>
             <li class="case-item">
-              <img src="./images/box2.jpg" alt="адаптация на планшет" width="370" />
+              <img src="./images/box2.png" alt="адаптация на планшет" width="370" />
             </li>
             <li class="case-item">
-              <img src="./images/box3.jpg" alt="адаптация на телефон" width="370" />
+              <img src="./images/box3.png" alt="адаптация на телефон" width="370" />
             </li>
           </ul>
         </div>
       </section>
       <!-- section team -->
       <section class="team-section">
-        <h2 class="team-heading">Наша команда</h2>
-        <ul class="team-list list">
-          <li class="team-item">
-            <img src="./images/img1.jpg" alt="фото команды 1" width="270" />
-            <h3 class="team-title">Игорь Демьяненко</h3>
-            <p lang="en" class="team-text">Product Designer</p>
-          </li>
-          <li class="team-item">
-            <img src="./images/img2.jpg" alt="фото команды 2" width="270" />
-            <h3 class="team-title">Ольга Репина</h3>
-            <p lang="en" class="team-text">Frontend Developer</p>
-          </li>
-          <li class="team-item">
-            <img src="./images/img3.jpg" alt="фото команды 3" width="270" />
-            <h3 class="team-title">Николай Тарасов</h3>
-            <p lang="en" class="team-text">Marketing</p>
-          </li>
-          <li class="team-item">
-            <img src="./images/img4.jpg" alt="фото команды 4" width="270" />
-            <h3 class="team-title">Михаил Ермаков</h3>
-            <p lang="en" class="team-text">UI Designer</p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="team-heading">Наша команда</h2>
+          <ul class="team-list list">
+            <li class="team-item">
+              <div class="team-info">
+                <img src="./images/img111.png" alt="фото команды 1" width="270" />
+                <h3 class="team-title">Игорь Демьяненко</h3>
+                <p lang="en" class="team-text">Product Designer</p>
+              </div>
+            </li>
+            <li class="team-item">
+              <img src="./images/img2.png" alt="фото команды 2" width="270" />
+              <h3 class="team-title">Ольга Репина</h3>
+              <p lang="en" class="team-text">Frontend Developer</p>
+            </li>
+            <li class="team-item">
+              <img src="./images/img3.png" alt="фото команды 3" width="270" />
+              <h3 class="team-title">Николай Тарасов</h3>
+              <p lang="en" class="team-text">Marketing</p>
+            </li>
+            <li class="team-item">
+              <img src="./images/img4.png" alt="фото команды 4" width="270" />
+              <h3 class="team-title">Михаил Ермаков</h3>
+              <p lang="en" class="team-text">UI Designer</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <!-- footer -->
     <footer class="footer">
-      <a href="#" class="footer-logo">Web<span class="footer-desk">Studio</span></a>
-      <ul id="контакты" class="footer-list list">
-        <li><a href="#контакты" class="footer-adress link">г. Киев, пр-т Леси Украинки, 26</a></li>
-        <li><a href="mailto:info@devstudio.com" class="footer-link link">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111" class="footer-link link">+38 096 111 11 11</a></li>
-      </ul>
+      <div class="container">
+        <a href="#" class="footer-logo">Web<span class="footer-desk">Studio</span></a>
+        <ul id="контакты" class="footer-list list">
+          <li>
+            <a href="#контакты" class="footer-adress link">г. Киев, пр-т Леси Украинки, 26</a>
+          </li>
+          <li>
+            <a href="mailto:info@devstudio.com" class="footer-link link">info@devstudio.com</a>
+          </li>
+          <li><a href="tel:+380961111111" class="footer-link link">+38 096 111 11 11</a></li>
+        </ul>
+      </div>
     </footer>
   </body>
 </html>
