--- a/portfolio.html
+++ b/portfolio.html
@@ -23,11 +23,13 @@
   <body>
     <!--header-->
     <header class="header">
-      <div class="conteiner">
+      <div class="container">
         <a href="#" class="header-logo">Web<span class="header-desk">Studio</span></a>
         <nav class="header-nav">
           <ul class="header-list list">
-            <li class="header-item"><a href="./index.html" class="header-link link"> Студия</a></li>
+            <li class="header-item">
+              <a href="./index.html" class="header-link link"> Студия</a>
+            </li>
             <li class="header-item">
               <a href="./portfolio.html" class="header-link link">Портфолио</a>
             </li>
@@ -46,92 +48,119 @@
     </header>
     <!-- main content -->
     <main>
-      <ul class="main-list list">
-        <li><button type="button" class="main-button">Все</button></li>
-        <li><button type="button" class="main-button">Веб-сайты</button></li>
-        <li><button type="button" class="main-button">Приложения</button></li>
-        <li><button type="button" class="main-button">Дизайн</button></li>
-        <li><button type="button" class="main-button">Маркетинг</button></li>
-      </ul>
-
-      <section class="project-section">
-        <h1 class="project-subject">Наши работы</h1>
-        <h2 class="project-subject">Примеры сайтов</h2>
-        <ul class="project-list list">
-          <li class="project-item">
-            <a href="" class="project-link link">
-              <img src="./images/img1.png" alt="фото сотрудников" width="370" />
-              <h3 class="project-title">Технокряк</h3>
-              <p class="project-text">Веб-сайт</p>
-            </a>
-          </li>
-          <li class="project-item">
-            <a href="" class="project-link link">
-              <img src="./images/img.jpg" alt="игра в батскетбол" width="370" />
-              <h3 lang="en" class="project-title">Постер New Orlean vs Golden Star</h3>
-              <p class="project-text">Дизайн</p>
-            </a>
-          </li>
-          <li class="project-item">
-            <a href="" class="project-link link">
-              <img src="./images/img11.jpg" alt="ресторан" width="370" />
-              <h3 class="project-title">Ресторан Seafood</h3>
-              <p class="project-text">Приложение</p>
-            </a>
-          </li>
-          <li class="project-item">
-            <a href="" class="project-link link">
-              <img src="./images/img21.jpg" alt="наушники" width="370" />
-              <h3 class="project-title">Проект Prime</h3>
-              <p class="project-text">Маркетинг</p>
-            </a>
-          </li>
-          <li class="project-item">
-            <a href="" class="project-link link">
-              <img src="./images/img33.jpg" alt="коробки" width="370" />
-              <h3 class="project-title">Проект Boxes</h3>
-              <p class="project-text">Приложение</p>
-            </a>
-          </li>
-          <li class="project-item">
-            <a href="" class="project-link link">
-              <img src="./images/img44.jpg" alt="компьютер" width="370" />
-              <h3 lang="en" class="project-title">Inspiration has no Borders</h3>
-              <p class="project-text">Веб-сайт</p>
-            </a>
-          </li>
-          <li class="project-item">
-            <a href="" class="project-link link">
-              <img src="./images/img55.jpg" alt="Книга" width="370" />
-              <h3 class="project-title">Издание Limited Edition</h3>
-              <p class="project-text">Дизайн</p>
-            </a>
-          </li>
-          <li class="project-item">
-            <a href="" class="project-link link">
-              <img src="./images/img66.jpg" alt="Бирка" width="370" />
-              <h3 class="project-title">Проект LAB</h3>
-              <p class="project-text">Маркетинг</p>
-            </a>
-          </li>
-          <li class="project-item">
-            <a href="" class="project-link link">
-              <img src="./images/img77.jpg" alt="Ноутбук" width="370" />
-              <h3 lang="en" class="project-title">Growing Business</h3>
-              <p class="project-text">Приложение</p>
-            </a>
-          </li>
+      <div class="container">
+        <ul class="main-list list">
+          <li class="main-btn"><button type="button" class="main-button">Все</button></li>
+          <li class="main-btn"><button type="button" class="main-button">Веб-сайты</button></li>
+          <li class="main-btn"><button type="button" class="main-button">Приложения</button></li>
+          <li class="main-btn"><button type="button" class="main-button">Дизайн</button></li>
+          <li class="main-btn"><button type="button" class="main-button">Маркетинг</button></li>
         </ul>
+      </div>
+      <section class="project-section">
+        <div class="container">
+          <h1 class="project-subject">Наши работы</h1>
+          <h2 class="project-subject">Примеры сайтов</h2>
+          <ul class="project-list list">
+            <li class="project-item">
+              <a href="" class="project-link link">
+                <img src="./images/img1.png" alt="фото сотрудников" width="370" />
+                <div class="project">
+                  <h3 class="project-title">Технокряк</h3>
+                  <p class="project-text">Веб-сайт</p>
+                </div>
+              </a>
+            </li>
+            <li class="project-item">
+              <a href="" class="project-link link">
+                <img src="./images/img.png" alt="игра в батскетбол" width="370" />
+                <div class="project">
+                  <h3 lang="en" class="project-title">Постер New Orlean vs Golden Star</h3>
+                  <p class="project-text">Дизайн</p>
+                </div>
+              </a>
+            </li>
+            <li class="project-item">
+              <a href="" class="project-link link">
+                <img src="./images/img11.png" alt="ресторан" width="370" />
+                <div class="project">
+                  <h3 class="project-title">Ресторан Seafood</h3>
+                  <p class="project-text">Приложение</p>
+                </div>
+              </a>
+            </li>
+            <li class="project-item">
+              <a href="" class="project-link link">
+                <img src="./images/img21.png" alt="наушники" width="370" />
+                <div class="project">
+                  <h3 class="project-title">Проект Prime</h3>
+                  <p class="project-text">Маркетинг</p>
+                </div>
+              </a>
+            </li>
+            <li class="project-item">
+              <a href="" class="project-link link">
+                <img src="./images/img33.png" alt="коробки" width="370" />
+                <div class="project">
+                  <h3 class="project-title">Проект Boxes</h3>
+                  <p class="project-text">Приложение</p>
+                </div>
+              </a>
+            </li>
+            <li class="project-item">
+              <a href="" class="project-link link">
+                <img src="./images/img44.png" alt="компьютер" width="370" />
+                <div class="project">
+                  <h3 lang="en" class="project-title">Inspiration has no Borders</h3>
+                  <p class="project-text">Веб-сайт</p>
+                </div>
+              </a>
+            </li>
+            <li class="project-item">
+              <a href="" class="project-link link">
+                <img src="./images/img55.png" alt="Книга" width="370" />
+                <div class="project">
+                  <h3 class="project-title">Издание Limited Edition</h3>
+                  <p class="project-text">Дизайн</p>
+                </div>
+              </a>
+            </li>
+            <li class="project-item">
+              <a href="" class="project-link link">
+                <img src="./images/img66.png" alt="Бирка" width="370" />
+                <div class="project">
+                  <h3 class="project-title">Проект LAB</h3>
+                  <p class="project-text">Маркетинг</p>
+                </div>
+              </a>
+            </li>
+            <li class="project-item">
+              <a href="" class="project-link link">
+                <img src="./images/img77.png" alt="Ноутбук" width="370" />
+                <div class="project">
+                  <h3 lang="en" class="project-title">Growing Business</h3>
+                  <p class="project-text">Приложение</p>
+                </div>
+              </a>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <!-- footer -->
     <footer class="footer">
-      <a href="#" class="footer-logo">Web<span class="footer-desk">Studio</span></a>
-      <ul id="контакты" class="footer-list list">
-        <li><a href="#контакты" class="footer-adress link">г. Киев, пр-т Леси Украинки, 26</a></li>
-        <li><a href="mailto:info@devstudio.com" class="footer-link link">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111" class="footer-link link">+38 096 111 11 11</a></li>
-      </ul>
+      <div class="container">
+        <a href="#" class="footer-logo">Web<span class="footer-desk">Studio</span></a>
+        <ul id="контакты" class="footer-list list">
+          <li>
+            <a href="#контакты" class="footer-adress link">г. Киев, пр-т Леси Украинки, 26</a>
+          </li>
+          <li>
+            <a href="mailto:info@devstudio.com" class="footer-link link">info@devstudio.com</a>
+          </li>
+          <li><a href="tel:+380961111111" class="footer-link link">+38 096 111 11 11</a></li>
+        </ul>
+      </div>
     </footer>
   </body>
 </html>
