--- a/index.html
+++ b/index.html
@@ -91,9 +91,9 @@
         </div>
       </section>
       <!--section case-->
-      <section class="case-section">
+      <section class="case-section section">
         <div class="container">
-          <h2 class="case-heading">Чем мы занимаемся</h2>
+          <h2 class="title">Чем мы занимаемся</h2>
           <ul class="case-list list">
             <li class="case-item">
               <img src="./images/box1.png" alt="верстка на компьютере" width="370" />
@@ -108,31 +108,39 @@
         </div>
       </section>
       <!-- section team -->
-      <section class="team-section">
+      <section class="team-section section">
         <div class="container">
-          <h2 class="team-heading">Наша команда</h2>
+          <h2 class="title">Наша команда</h2>
           <ul class="team-list list">
             <li class="team-item">
               <div class="team-info">
                 <img src="./images/img111.png" alt="фото команды 1" width="270" />
+                <!-- <div class="team-description"> -->
                 <h3 class="team-title">Игорь Демьяненко</h3>
                 <p lang="en" class="team-text">Product Designer</p>
+                <!-- </div> -->
               </div>
             </li>
             <li class="team-item">
               <img src="./images/img2.png" alt="фото команды 2" width="270" />
-              <h3 class="team-title">Ольга Репина</h3>
-              <p lang="en" class="team-text">Frontend Developer</p>
+              <div class="team-description">
+                <h3 class="team-title">Ольга Репина</h3>
+                <p lang="en" class="team-text">Frontend Developer</p>
+              </div>
             </li>
             <li class="team-item">
               <img src="./images/img3.png" alt="фото команды 3" width="270" />
-              <h3 class="team-title">Николай Тарасов</h3>
-              <p lang="en" class="team-text">Marketing</p>
+              <div class="team-description">
+                <h3 class="team-title">Николай Тарасов</h3>
+                <p lang="en" class="team-text">Marketing</p>
+              </div>
             </li>
             <li class="team-item">
               <img src="./images/img4.png" alt="фото команды 4" width="270" />
-              <h3 class="team-title">Михаил Ермаков</h3>
-              <p lang="en" class="team-text">UI Designer</p>
+              <div class="team-description">
+                <h3 class="team-title">Михаил Ермаков</h3>
+                <p lang="en" class="team-text">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
@@ -143,13 +151,15 @@
       <div class="container">
         <a href="#" class="footer-logo">Web<span class="footer-desk">Studio</span></a>
         <ul id="контакты" class="footer-list list">
-          <li>
+          <li class="footer-item">
             <a href="#контакты" class="footer-adress link">г. Киев, пр-т Леси Украинки, 26</a>
           </li>
-          <li>
+          <li class="footer-item">
             <a href="mailto:info@devstudio.com" class="footer-link link">info@devstudio.com</a>
           </li>
-          <li><a href="tel:+380961111111" class="footer-link link">+38 096 111 11 11</a></li>
+          <li class="footer-item">
+            <a href="tel:+380961111111" class="footer-link link">+38 096 111 11 11</a>
+          </li>
         </ul>
       </div>
     </footer>
