--- a/portfolio.html
+++ b/portfolio.html
@@ -61,89 +61,107 @@
         <div class="container">
           <h1 class="project-subject">Наши работы</h1>
           <h2 class="project-subject">Примеры сайтов</h2>
-          <ul class="project-list list">
-            <li class="project-item">
-              <a href="" class="project-link link">
-                <img src="./images/img1.png" alt="фото сотрудников" width="370" />
-                <div class="project">
-                  <h3 class="project-title">Технокряк</h3>
-                  <p class="project-text">Веб-сайт</p>
-                </div>
-              </a>
-            </li>
-            <li class="project-item">
-              <a href="" class="project-link link">
-                <img src="./images/img.png" alt="игра в батскетбол" width="370" />
-                <div class="project">
-                  <h3 lang="en" class="project-title">Постер New Orlean vs Golden Star</h3>
-                  <p class="project-text">Дизайн</p>
-                </div>
-              </a>
-            </li>
-            <li class="project-item">
-              <a href="" class="project-link link">
-                <img src="./images/img11.png" alt="ресторан" width="370" />
-                <div class="project">
-                  <h3 class="project-title">Ресторан Seafood</h3>
-                  <p class="project-text">Приложение</p>
-                </div>
-              </a>
-            </li>
-            <li class="project-item">
-              <a href="" class="project-link link">
-                <img src="./images/img21.png" alt="наушники" width="370" />
-                <div class="project">
-                  <h3 class="project-title">Проект Prime</h3>
-                  <p class="project-text">Маркетинг</p>
-                </div>
-              </a>
-            </li>
-            <li class="project-item">
-              <a href="" class="project-link link">
-                <img src="./images/img33.png" alt="коробки" width="370" />
-                <div class="project">
-                  <h3 class="project-title">Проект Boxes</h3>
-                  <p class="project-text">Приложение</p>
-                </div>
-              </a>
-            </li>
-            <li class="project-item">
-              <a href="" class="project-link link">
-                <img src="./images/img44.png" alt="компьютер" width="370" />
-                <div class="project">
-                  <h3 lang="en" class="project-title">Inspiration has no Borders</h3>
-                  <p class="project-text">Веб-сайт</p>
-                </div>
-              </a>
-            </li>
-            <li class="project-item">
-              <a href="" class="project-link link">
-                <img src="./images/img55.png" alt="Книга" width="370" />
-                <div class="project">
-                  <h3 class="project-title">Издание Limited Edition</h3>
-                  <p class="project-text">Дизайн</p>
-                </div>
-              </a>
-            </li>
-            <li class="project-item">
-              <a href="" class="project-link link">
-                <img src="./images/img66.png" alt="Бирка" width="370" />
-                <div class="project">
-                  <h3 class="project-title">Проект LAB</h3>
-                  <p class="project-text">Маркетинг</p>
-                </div>
-              </a>
-            </li>
-            <li class="project-item">
-              <a href="" class="project-link link">
-                <img src="./images/img77.png" alt="Ноутбук" width="370" />
-                <div class="project">
-                  <h3 lang="en" class="project-title">Growing Business</h3>
-                  <p class="project-text">Приложение</p>
-                </div>
-              </a>
-            </li>
-          </ul>
+          <div class="project-list">
+            <div class="project-info">
+              <div class="project-item">
+                <a href="" class="project-link link">
+                  <img src="./images/img1.png" alt="фото сотрудников" width="370" />
+                  <div class="project">
+                    <h2 class="project-title">Технокряк</h2>
+                    <p class="project-text">Веб-сайт</p>
+                  </div>
+                </a>
+              </div>
+            </div>
+            <div class="project-info">
+              <div class="project-item">
+                <a href="" class="project-link link">
+                  <img src="./images/img.png" alt="игра в батскетбол" width="370" />
+                  <div class="project">
+                    <h2 lang="en" class="project-title">Постер New Orlean vs Golden Star</h2>
+                    <p class="project-text">Дизайн</p>
+                  </div>
+                </a>
+              </div>
+            </div>
+            <div class="project-info">
+              <div class="project-item">
+                <a href="" class="project-link link">
+                  <img src="./images/img11.png" alt="ресторан" width="370" />
+                  <div class="project">
+                    <h2 class="project-title">Ресторан Seafood</h2>
+                    <p class="project-text">Приложение</p>
+                  </div>
+                </a>
+              </div>
+            </div>
+            <div class="project-info">
+              <div class="project-item">
+                <a href="" class="project-link link">
+                  <img src="./images/img21.png" alt="наушники" width="370" />
+                  <div class="project">
+                    <h2 class="project-title">Проект Prime</h2>
+                    <p class="project-text">Маркетинг</p>
+                  </div>
+                </a>
+              </div>
+            </div>
+            <div class="project-info">
+              <div class="project-item">
+                <a href="" class="project-link link">
+                  <img src="./images/img33.png" alt="коробки" width="370" />
+                  <div class="project">
+                    <h2 class="project-title">Проект Boxes</h2>
+                    <p class="project-text">Приложение</p>
+                  </div>
+                </a>
+              </div>
+            </div>
+            <div class="project-info">
+              <div class="project-item">
+                <a href="" class="project-link link">
+                  <img src="./images/img44.png" alt="компьютер" width="370" />
+                  <div class="project">
+                    <h2 lang="en" class="project-title">Inspiration has no Borders</h2>
+                    <p class="project-text">Веб-сайт</p>
+                  </div>
+                </a>
+              </div>
+            </div>
+            <div class="project-info">
+              <div class="project-item">
+                <a href="" class="project-link link">
+                  <img src="./images/img55.png" alt="Книга" width="370" />
+                  <div class="project">
+                    <h2 class="project-title">Издание Limited Edition</h2>
+                    <p class="project-text">Дизайн</p>
+                  </div>
+                </a>
+              </div>
+            </div>
+            <div class="project-info">
+              <div class="project-item">
+                <a href="" class="project-link link">
+                  <img src="./images/img66.png" alt="Бирка" width="370" />
+                  <div class="project">
+                    <h2 class="project-title">Проект LAB</h2>
+                    <p class="project-text">Маркетинг</p>
+                  </div>
+                </a>
+              </div>
+            </div>
+            <div class="project-info">
+              <div class="project-item">
+                <a href="" class="project-link link">
+                  <img src="./images/img77.png" alt="Ноутбук" width="370" />
+                  <div class="project">
+                    <h2 lang="en" class="project-title">Growing Business</h2>
+                    <p class="project-text">Приложение</p>
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
         </div>
       </section>
     </main>
