--- a/index.html
+++ b/index.html
@@ -115,10 +115,10 @@
             <li class="team-item">
               <div class="team-info">
                 <img src="./images/img111.png" alt="фото команды 1" width="270" />
-                <!-- <div class="team-description"> -->
-                <h3 class="team-title">Игорь Демьяненко</h3>
-                <p lang="en" class="team-text">Product Designer</p>
-                <!-- </div> -->
+                <div class="team-description">
+                  <h3 class="team-title">Игорь Демьяненко</h3>
+                  <p lang="en" class="team-text">Product Designer</p>
+                </div>
               </div>
             </li>
             <li class="team-item">
