--- a/portfolio.html
+++ b/portfolio.html
@@ -48,21 +48,18 @@
     </header>
     <!-- main content -->
     <main>
-      <div class="container">
-        <ul class="main-list list">
-          <li class="main-btn"><button type="button" class="main-button">Все</button></li>
-          <li class="main-btn"><button type="button" class="main-button">Веб-сайты</button></li>
-          <li class="main-btn"><button type="button" class="main-button">Приложения</button></li>
-          <li class="main-btn"><button type="button" class="main-button">Дизайн</button></li>
-          <li class="main-btn"><button type="button" class="main-button">Маркетинг</button></li>
-        </ul>
-      </div>
-      <section class="project-section">
+      <section class="project-section section">
+        <h1 class="project-subject">Наши работы</h1>
         <div class="container">
-          <h1 class="project-subject">Наши работы</h1>
-          <h2 class="project-subject">Примеры сайтов</h2>
-          <div class="project-list">
-            <div class="project-info">
+          <ul class="main-list list">
+            <li class="main-btn"><button type="button" class="main-button">Все</button></li>
+            <li class="main-btn"><button type="button" class="main-button">Веб-сайты</button></li>
+            <li class="main-btn"><button type="button" class="main-button">Приложения</button></li>
+            <li class="main-btn"><button type="button" class="main-button">Дизайн</button></li>
+            <li class="main-btn"><button type="button" class="main-button">Маркетинг</button></li>
+          </ul>
+          <ul class="project-list list">
+            <li class="project-info">
               <div class="project-item">
                 <a href="" class="project-link link">
                   <img src="./images/img1.png" alt="фото сотрудников" width="370" />
@@ -72,8 +69,8 @@
                   </div>
                 </a>
               </div>
-            </div>
-            <div class="project-info">
+            </li>
+            <li class="project-info">
               <div class="project-item">
                 <a href="" class="project-link link">
                   <img src="./images/img.png" alt="игра в батскетбол" width="370" />
@@ -83,8 +80,8 @@
                   </div>
                 </a>
               </div>
-            </div>
-            <div class="project-info">
+            </li>
+            <li class="project-info">
               <div class="project-item">
                 <a href="" class="project-link link">
                   <img src="./images/img11.png" alt="ресторан" width="370" />
@@ -94,8 +91,8 @@
                   </div>
                 </a>
               </div>
-            </div>
-            <div class="project-info">
+            </li>
+            <li class="project-info">
               <div class="project-item">
                 <a href="" class="project-link link">
                   <img src="./images/img21.png" alt="наушники" width="370" />
@@ -105,8 +102,8 @@
                   </div>
                 </a>
               </div>
-            </div>
-            <div class="project-info">
+            </li>
+            <li class="project-info">
               <div class="project-item">
                 <a href="" class="project-link link">
                   <img src="./images/img33.png" alt="коробки" width="370" />
@@ -116,8 +113,8 @@
                   </div>
                 </a>
               </div>
-            </div>
-            <div class="project-info">
+            </li>
+            <li class="project-info">
               <div class="project-item">
                 <a href="" class="project-link link">
                   <img src="./images/img44.png" alt="компьютер" width="370" />
@@ -127,8 +124,8 @@
                   </div>
                 </a>
               </div>
-            </div>
-            <div class="project-info">
+            </li>
+            <li class="project-info">
               <div class="project-item">
                 <a href="" class="project-link link">
                   <img src="./images/img55.png" alt="Книга" width="370" />
@@ -138,8 +135,8 @@
                   </div>
                 </a>
               </div>
-            </div>
-            <div class="project-info">
+            </li>
+            <li class="project-info">
               <div class="project-item">
                 <a href="" class="project-link link">
                   <img src="./images/img66.png" alt="Бирка" width="370" />
@@ -149,8 +146,8 @@
                   </div>
                 </a>
               </div>
-            </div>
-            <div class="project-info">
+            </li>
+            <li class="project-info">
               <div class="project-item">
                 <a href="" class="project-link link">
                   <img src="./images/img77.png" alt="Ноутбук" width="370" />
@@ -160,8 +157,8 @@
                   </div>
                 </a>
               </div>
-            </div>
-          </div>
+            </li>
+          </ul>
         </div>
       </section>
     </main>
