--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@
       <!--section benefist-->
       <section class="benefist section">
         <div class="container">
-          <h2 class="benefist-subject">Дополнительная информация</h2>
+          <h2 class="visually-hidden">Дополнительная информация</h2>
+
           <ul class="benefist-list list">
             <li class="benefist-item">
               <h3 class="benefist-title">Внимание к деталям</h3>
