--- a/portfolio.html
+++ b/portfolio.html
@@ -49,7 +49,7 @@
     <!-- main content -->
     <main>
       <section class="project-section section">
-        <h1 class="project-subject">Наши работы</h1>
+        <h1 class="visually-hidden">Наши работы</h1>
         <div class="container">
           <ul class="main-list list">
             <li class="main-btn"><button type="button" class="main-button">Все</button></li>
@@ -62,7 +62,7 @@
             <li class="project-info">
               <div class="project-item">
                 <a href="" class="project-link link">
-                  <img src="./images/img1.png" alt="фото сотрудников" width="370" />
+                  <img src="./images/img 143.jpg" alt="фото сотрудников" width="370" />
                   <div class="project">
                     <h2 class="project-title">Технокряк</h2>
                     <p class="project-text">Веб-сайт</p>
@@ -73,7 +73,7 @@
             <li class="project-info">
               <div class="project-item">
                 <a href="" class="project-link link">
-                  <img src="./images/img.png" alt="игра в батскетбол" width="370" />
+                  <img src="./images/img.jpg" alt="игра в батскетбол" width="370" />
                   <div class="project">
                     <h2 lang="en" class="project-title">Постер New Orlean vs Golden Star</h2>
                     <p class="project-text">Дизайн</p>
